# ScubaOverlay

./: .gitignore  Readme.md  font_utils.py  main.py  overlay.py  parser.py  pyinstaller.spec  pyproject.toml  requirements.txt  scuba-overlay.spec  simpilfont.py  template.py
.github/workflows/: build.yml
cc-example-logs/: cc-shearwater.xml  cc-subsurface.ssrf
docs/: profile-template-guide.md  template-guide.md  video-segment-matching.md
openspec/: project.md
openspec/changes/archive/2025-12-04-add-ci-binary-builds/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-04-add-ci-binary-builds/specs/ci-cd/: spec.md
openspec/changes/archive/2025-12-04-modernize-python-packaging/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-05-fix-ci-binary-performance/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-08-add-video-segment-matching/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-11-add-dive-profile-graph/: README.md  design.md  proposal.md  tasks.md
openspec/specs/ci-cd/: spec.md
openspec/specs/dive-profile-overlay/: spec.md
openspec/specs/packaging/: spec.md
openspec/specs/video-segment-matching/: spec.md
sample-logs/: Afric.csv  PerdixAI203.xml  dive426.ssrf  dive446.ssrf  match-video.ssrf  shearwater--date-ddmmyyy.xml
samples/: dive446.ssrf
src/: main.py  overlay.py  parser.py  profile_graph.py  utils.py  video_metadata.py  video_segment_errors.py
templates/: perdix-ai-cc-tech.yaml  perdix-ai-oc-tech.yaml  profile-full.yaml  profile-simple.yaml
(+9 files in other folders)
